x2goclient (3.99.1.0-0~x2go1) UNRELEASED; urgency=low

  [ Mike Gabriel ]
  * Continue development...

  [ Oleksandr Shneyder ]
  * Get new ports from x2goresume-session if reserved ports are busy
  * Fixed segmentation fault by failed SSH connection to X2Go server

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 01 Feb 2012 14:07:55 +0100

x2goclient (3.99.0.6-0~x2go1) unstable; urgency=low

  [ Oleksandr Shneyder ]
  * New upstream version (3.99.0.6):
    - Update copyright section in ssmasterconnection.h/cpp and
      sshprocess.h/cpp.
    - Traditional Chinese(zh_TW) translation for x2goclient from
      Liu Arlo <arlo.liu@atrustcorp.com>.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 01 Feb 2012 13:52:40 +0100

x2goclient (3.99.0.5-0~x2go1) unstable; urgency=low

  [ Mike Gabriel ]
  * New upstream version (3.99.0.5):
    - Rename in human readable text strings ,,X2go'' to ,,X2Go''.
    - Fix version string on man page.

  [ Oleksandr Shneyder ]
  * New upstream version (3.99.0.5):
    - Waiting for SshMasterConnection thread to be finished before
      deleting it (segfault by wrong authentication fix).

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Fri, 27 Jan 2012 12:43:04 +0100

x2goclient (3.99.0.4-0~x2go1) unstable; urgency=low

  [ Oleksandr Shneyder ]
  * New upstream version (3.99.0.4):
    - Enabled support for Xinerama

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 18 Jan 2012 14:53:20 +0100

x2goclient (3.99.0.3-0~x2go4) unstable; urgency=low

  [ Mike Gabriel ]
  * Rename icon title in /debian/menu file.
  * Also split package dependencies for x2goplugin.
  * Add libxpm-dev as build-dependency.
  * Revert version number in version.h and x2goplugin.rc to 3.99.0.3.

  [ Guido Günther ]
  * Split package dependencies for SSH server/client.

  [ Oleksandr Shneyder ]
  * New upstream version (3.99.0.3):
    - LDAP: ssh port for every x2goserver can be specified in Server entry,
      parameter "l"